# video-processing

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
infra/: app.py  cdk.context.json  cdk.json
infra/infra/: pipeline_stack.py  platform_stack.py  services_stack.py
localstack/: init-s3.sh  init-sqs.sh
migrations/: env.py
migrations/versions/: 530ddff684ef_add_transcode_job_types_and_preview_.py  6765fb435cbe_create_initial_tables.py
src/video_processing/: __init__.py
src/video_processing/api/: main.py
src/video_processing/api/routes/: health.py  videos.py
src/video_processing/api/schemas/: video.py  video_request.py  video_response.py  video_service.py
src/video_processing/api/services/: video_dto.py  video_service.py
src/video_processing/common/config/: settings.py
src/video_processing/common/db/: session.py
src/video_processing/common/db/repositories/: generated_asset_repository.py  processing_job_repository.py  video_repository.py
src/video_processing/common/models/: asset_type.py  enum_type.py  generated_asset.py  job_type.py  processing_job.py  video.py  video_status.py
src/video_processing/common/queue/: s3_events.py  sqs.py
src/video_processing/common/storage/: s3.py
src/video_processing/worker/: jobs.py  main.py  processing.py  s3_events.py  transcode.py
tests/: conftest.py
tests/api/: test_video_request.py  test_video_routes.py  test_video_service.py
tests/common/: test_generated_asset_repository.py  test_processing_job_repository.py  test_s3_events.py  test_video_repository.py
tests/worker/: test_jobs.py  test_transcode.py
