[project]
name = "video-processing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "boto3>=1.43.51",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_processing"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
# Pyflakes + pycodestyle (E/W) + isort (I) + pyupgrade (UP) + bugbear (B):
# a solid, low-noise baseline rather than every rule set ruff offers.
select = ["E", "F", "W", "I", "UP", "B"]
